use maven-springrts-parent

--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.springrts</groupId>
+		<artifactId>parent</artifactId>
+		<version>1.1</version>
+	</parent>
+
 	<properties>
-		<!--
-			This may get better support in Maven 3, see:
-			http://docs.codehaus.org/display/MAVENUSER/POM+Element+for+Source+File+Encoding
-		-->
-		<project.build.encoding>UTF-8</project.build.encoding>
-		<project.build.sourceEncoding>${project.build.encoding}</project.build.sourceEncoding>
-		<project.build.resourceEncoding>${project.build.encoding}</project.build.resourceEncoding>
 		<jna.version>3.2.5</jna.version>
 	</properties>
 
@@ -17,26 +16,11 @@
 	<version>0.3-SNAPSHOT</version>
 
 	<packaging>bundle</packaging>
-	<prerequisites>
-		<maven>2.1</maven>
-	</prerequisites>
 
-	<organization>
-		<name>Spring RTS Community</name>
-		<url>http://springrts.com</url>
-	</organization>
 	<name>JUnitSync</name>
 	<description>The Spring RTS info library wrapper</description>
 	<url>http://springrts.com</url>
 	<inceptionYear>2010</inceptionYear>
-
-	<licenses>
-		<license>
-			<name>GPL</name>
-			<url>http://www.gnu.org/licenses/gpl.html</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
 
 	<issueManagement>
 		<system>github</system>
@@ -73,18 +57,6 @@
 		<defaultGoal>package</defaultGoal>
 
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
-					<showDeprecation>true</showDeprecation>
-				</configuration>
-			</plugin>
-
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
